--- a/modules/Test/view/rest.phtml
+++ b/modules/Test/view/rest.phtml
@@ -1,13 +1,26 @@
+<h2 style="margin: 100px;">Rest</h2>
+
+{#
 <table class="table">
-<?php
-foreach ($this->data as $record) :
-    echo "<tr>";
-    foreach ($record->toArray() as $field => $value) :
-?>
-    <td><?=$value?></td>
-<?php
+    <?php
+    foreach ($this->data as $record) :
+        echo "<tr>";
+        foreach ($record->toArray() as $field => $value) :
+            ?>
+            <td><?=$value?></td>
+            <?php
+        endforeach;
+        echo "</tr>";
     endforeach;
-    echo "</tr>";
-endforeach;
-?>
+    ?>
+
 </table>
+#}
+
+{{ data }}
+
+{% for record in products %}
+<tr>
+    <td>sdf</td>
+</tr>
+{% endfor %}
